Correción de registro de mercancia

--- a/EmpresaImportadoraDC/Views/Mercancia/Index.cshtml
+++ b/EmpresaImportadoraDC/Views/Mercancia/Index.cshtml
@@ -19,7 +19,7 @@
         </div>
         <br />
         <p>
-            <a asp-action="CrearMerca" class="btn btn-success"><i class="fas fa-user-plus"></i>Registrar Mercancia</a>
+            <a asp-action="CrearMer" class="btn btn-success"><i class="fas fa-user-plus"></i>Registrar Mercancia</a>
         </p>
         <table class="table" id="tabla">
             <thead>
