--- a/EmpresaImportadoraDC/Views/Mercancia/CrearMer.cshtml
+++ b/EmpresaImportadoraDC/Views/Mercancia/CrearMer.cshtml
@@ -1,16 +1,14 @@
 ﻿@model EmpresaImportadoraDC.Models.Entities.Mercancia
 @{
-    ViewData["Title"] = "CrearMerca";
+    ViewData["Title"] = "CrearMercancia";
 }
 
-<h1>Crear</h1>
-
-<h4>Cliente</h4>
+<h1>Crear Mercancia</h1>
 <hr />
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CrearMerca">
+        <form asp-action="CrearMer">
 
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="MercanciaId" />
