--- a/EmpresaImportadoraDC/Views/Mercancia/EditarMerca.cshtml
+++ b/EmpresaImportadoraDC/Views/Mercancia/EditarMerca.cshtml
@@ -9,7 +9,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="EditarCli">
+        <form asp-action="EditarMerca">
 
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="MercanciaId" />
