--- a/EmpresaImportadoraDC/Views/Shared/_Sidebar.cshtml
+++ b/EmpresaImportadoraDC/Views/Shared/_Sidebar.cshtml
@@ -95,7 +95,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="pages/charts/chartjs.html" class="nav-link">
+                             <a asp-action="index" asp-controller="Mercancia" class="nav-link">
                                 <i class="fas fa-hockey-puck"></i>
                                 <p>Mercancias</p>
                             </a>
