--- a/EmpresaImportadoraDC/Views/Shared/_Sidebar.cshtml
+++ b/EmpresaImportadoraDC/Views/Shared/_Sidebar.cshtml
@@ -89,7 +89,7 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="pages/charts/chartjs.html" class="nav-link">
+                            <a asp-action="EditarValorLibra" asp-controller="ValorLibras" class="nav-link">
                                 <i class="fas fa-hockey-puck"></i>
                                 <p>Valor Libra</p>
                             </a>
