--- a/EmpresaImportadoraDC/Views/Paquetes/CrearPaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/CrearPaquete.cshtml
@@ -45,7 +45,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="TransportadoraUSA" class="control-label"></label>
-                    <input asp-for="TransportadoraUSA" class="form-control" />
+                    <select asp-items="ViewBag.ListaTransportadoraUSA" asp-for="TransportadoraUSA" class="form-control"></select>
                     <span asp-validation-for="TransportadoraUSA" class="text-danger"></span>
                 </div>
                 <div class="form-group">
