--- a/EmpresaImportadoraDC/Views/Paquetes/DespacharPaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/DespacharPaquete.cshtml
@@ -43,7 +43,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="TransportadoraCO" class="control-label"></label>
-                    <input asp-for="TransportadoraCO" class="form-control" />
+                    <select asp-items="ViewBag.ListaTransportadoraCO" asp-for="TransportadoraCO" class="form-control"></select>
                     <span asp-validation-for="TransportadoraCO" class="text-danger"></span>
                 </div>   
                 <div class="form-group">
