--- a/EmpresaImportadoraDC/Views/Paquetes/EditarPaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/EditarPaquete.cshtml
@@ -50,7 +50,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="TransportadoraUSA" class="control-label"></label>
-                    <input asp-for="TransportadoraUSA" class="form-control" />
+                    <select asp-items="ViewBag.ListaTransportadoraUSA" asp-for="TransportadoraUSA" class="form-control"></select>
                     <span asp-validation-for="TransportadoraUSA" class="text-danger"></span>
                 </div>
                 <div class="form-group">
@@ -65,7 +65,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="TransportadoraCO" class="control-label"></label>
-                    <input asp-for="TransportadoraCO" class="form-control" />
+                    <select asp-items="ViewBag.ListaTransportadoraCO" asp-for="TransportadoraCO" class="form-control"></select>
                     <span asp-validation-for="TransportadoraCO" class="text-danger"></span>
                 </div>
                 <div class="form-group">
