--- a/EmpresaImportadoraDC/Views/Paquetes/Index.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/Index.cshtml
@@ -20,7 +20,7 @@
         </div>
         <br />
         <p>
-            <a asp-action="CrearPaquete" class="btn btn-success ">Registrar paquete</a>
+            <a asp-action="CrearPaquete" class="btn btn-success "><i class="fas fa-plus"></i> Registrar paquete</a>
         </p>
         <table class="table" id="tabla">
             <thead>
@@ -72,10 +72,10 @@
                             }
                         </td>
                         <td>
-                            <a asp-action="DetallePaquete" asp-route-id="@item.PaqueteId" class="btn btn-success">Detalle</a>
-                            <a asp-action="EditarPaquete" asp-route-id="@item.PaqueteId" class="btn btn-success">Editar</a>
+                            <a asp-action="DetallePaquete" asp-route-id="@item.PaqueteId" class="btn btn-success"><i class="fas fa-info-circle"></i></a>
+                            <a asp-action="EditarPaquete" asp-route-id="@item.PaqueteId" class="btn btn-success"><i class="fas fa-pencil-alt"></i></a>
                             <form asp-action="EliminarPaquete" asp-route-id="@item.PaqueteId" class="d-inline">
-                                <button type="submit" class="btn btn-danger">Eliminar</button>
+                                <button type="submit" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
                             </form>                            
                         </td>
                     </tr>
