--- a/EmpresaImportadoraDC/Views/Paquetes/DashboardPaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/DashboardPaquete.cshtml
@@ -27,12 +27,12 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0">Dashboard</h1>
+                <h1 class="m-0">DASHBOARD PAQUETE</h1>
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item active">Dashboard v1</li>
+                    <li class="breadcrumb-item"><a asp-action="index" asp-controller="Paquetes">Inicio</a></li>
+                    <li class="breadcrumb-item active">Dashboard paquete</li>
                 </ol>
             </div><!-- /.col -->
         </div><!-- /.row -->
@@ -47,15 +47,13 @@
             <div class="col-lg-3 col-6">
                 <!-- small box -->
                 <div class="small-box bg-info">
-                    <div class="inner">
+                    <div class="inner">                        
                         <h3>150</h3>
-
-                        <p>New Orders</p>
+                        <p>Cantidad de paquetes</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-bag"></i>
-                    </div>
-                    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                    </div>                    
                 </div>
             </div>
             <!-- ./col -->
