--- a/EmpresaImportadoraDC/Views/Clientes/VerDetallePaqueteCliente.cshtml
+++ b/EmpresaImportadoraDC/Views/Clientes/VerDetallePaqueteCliente.cshtml
@@ -36,6 +36,25 @@
                     </th>
                 </tr>
             </thead>
-        </table>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Codigo)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PesoLibras)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Estado)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ValorTotal)
+                    </td>
+                </tr>
+            }
+        </tbody>
+              </table>
     </div>
 </section>
