Ícono de camión en el sidebar, cambios en el crear, editar y el index

--- a/EmpresaImportadoraDC/Views/Shared/_Sidebar.cshtml
+++ b/EmpresaImportadoraDC/Views/Shared/_Sidebar.cshtml
@@ -102,7 +102,7 @@
                         </li>
                         <li class="nav-item">
                             <a asp-action="index" asp-controller="Transportadoras" class="nav-link">
-                                <i class="fas fa-hockey-puck"></i>
+                                <i class="fas fa-truck"></i>
                                 <p>Transportadoras</p>
                             </a>
                         </li>
