--- a/EmpresaImportadoraDC/Views/Transportadoras/CrearTr.cshtml
+++ b/EmpresaImportadoraDC/Views/Transportadoras/CrearTr.cshtml
@@ -4,9 +4,22 @@
     ViewData["Title"] = "Crear";
 }
 
-<h1>Crear</h1>
-
-<h4>Transportadora</h4>
+<section class="content">
+    <div class="container-fluid">
+        <br />
+        <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1 class="m-0">REGISTRAR TRANSPORTADORA</h1>
+            </div>
+            <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                    <li class="breadcrumb-item"><a asp-action="index" asp-controller="Transportadoras">Inicio</a></li>
+                    <li class="breadcrumb-item active">Registrar transportadora</li>
+                </ol>
+            </div>
+        </div>
+    </div>
+</section>
 <hr />
 <div class="row">
     <div class="col-md-4">
