--- a/EmpresaImportadoraDC/Views/Clientes/DashboardCli.cshtml
+++ b/EmpresaImportadoraDC/Views/Clientes/DashboardCli.cshtml
@@ -27,12 +27,12 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0">Dashboard</h1>
+                <h1 class="m-0">DASHBOARD CLIENTE</h1>
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item active">Dashboard v1</li>
+                    <li class="breadcrumb-item"><a asp-action="index" asp-controller="Clientes">Inicio</a></li>
+                    <li class="breadcrumb-item active">Dashboard cliente</li>
                 </ol>
             </div><!-- /.col -->
         </div><!-- /.row -->
@@ -49,13 +49,11 @@
                 <div class="small-box bg-info">
                     <div class="inner">
                         <h3>150</h3>
-
-                        <p>New Orders</p>
+                        <p>Cantidad de clientes</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-bag"></i>
                     </div>
-                    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                 </div>
             </div>
             <!-- ./col -->
@@ -80,7 +78,7 @@
                     <div class="inner">
                         <h3>44</h3>
 
-                        <p>User Registrations</p>
+                        <p>Clientes Registrados</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-person-add"></i>
