--- a/EmpresaImportadoraDC/Views/Clientes/Index.cshtml
+++ b/EmpresaImportadoraDC/Views/Clientes/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<EmpresaImportadoraDC.Models.Entities.Cliente>
+
 @{
     ViewData["Title"] = "Index";
 }
@@ -12,14 +13,14 @@
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="#">Inicio</a></li>
+                    <li class="breadcrumb-item"><a asp-action="index" asp-controller="Clientes">Inicio</a></li>
                     <li class="breadcrumb-item active">Clientes</li>
                 </ol>
             </div>
         </div>
         <br />
         <p>
-            <a asp-action="CrearCli" class="btn btn-success"><i class="fas fa-user-plus"></i>Registrar cliente</a>
+            <a asp-action="CrearCli"  class="btn btn-success "><i class="fas fa-plus"></i>Registrar cliente</a>
         </p>
         <table class="table" id="tabla">
             <thead>
@@ -58,11 +59,11 @@
                             @Html.DisplayFor(modelItem => item.DireccionEntrega)
                         </td>
                         <td>
-                            <a asp-action="EditarCli" asp-route-id="@item.ClienteId">Editar</a> |
+                            <a asp-action="VerDetallePaqueteCliente" asp-route-id="@item.ClienteId" class="btn btn-success"><i class="fas fa-info-circle"></i></a>
+                            <a asp-action="EditarCli" asp-route-id="@item.ClienteId" class="btn btn-success"><i class="fas fa-pencil-alt"></i></a>
 
-                            <a asp-action="VerDetallePaqueteCliente" asp-route-id="@item.ClienteId">Ver detalle</a> |
                             <form asp-action="EliminarCliente" asp-route-id="@item.ClienteId" class="d-inline">
-                                <button type="submit" onclick="confirm('¿Desea eliminar este cliente?')" class="btn btn-danger"><i class="fas fa-user-minus"></i></button>
+                                <button type="submit" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
                             </form>
                         </td>
                     </tr>
