--- a/EmpresaImportadoraDC/Views/Paquetes/EditarPaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/EditarPaquete.cshtml
@@ -23,7 +23,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="EditarPaquete" asp-route-id="@Model.PaqueteId" enctype="multipart/form-data">  
+            <form asp-action="EditarPaquete" asp-route-id="@Model.PaqueteId" enctype="multipart/form-data">
                 <input type="hidden" asp-for="PaqueteId" />
                 <input type="hidden" asp-for="NoGuiaCO" />
                 <input type="hidden" asp-for="TransportadoraCO" />
@@ -54,7 +54,7 @@
                     <span asp-validation-for="TransportadoraUSA" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label class="control-label">Tipo de mercancía</label>                    
+                    <label class="control-label">Tipo de mercancía</label>
                     <select asp-items="ViewBag.ListaMercancia" asp-for="MercanciaId" class="form-control"></select>
                     <span asp-validation-for="MercanciaId" class="text-danger"></span>
                 </div>
@@ -85,3 +85,7 @@
         </div>
     </div>
 </div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
