--- a/EmpresaImportadoraDC/Views/Paquetes/Index.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/Index.cshtml
@@ -72,8 +72,8 @@
                             }
                         </td>
                         <td>
-                            <a asp-action="DetallePaquete" asp-route-id="@item.PaqueteId" class="btn btn-success"><i class="fas fa-info-circle"></i></a>
-                            <a asp-action="EditarPaquete" asp-route-id="@item.PaqueteId" class="btn btn-success"><i class="fas fa-pencil-alt"></i></a>
+                            <a asp-action="DetallePaquete" asp-route-id="@item.PaqueteId" class="btn btn-success"><i class="fas fa-info-circle"></i></a>|
+                            <a asp-action="EditarPaquete" asp-route-id="@item.PaqueteId" class="btn btn-success"><i class="fas fa-pencil-alt"></i></a>|
                             <form asp-action="EliminarPaquete" asp-route-id="@item.PaqueteId" class="d-inline">
                                 <button type="submit" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
                             </form>                            
