Cambios leves en iconos y paquetes

--- a/EmpresaImportadoraDC/Views/Paquetes/DashboardPaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/DashboardPaquete.cshtml
@@ -63,12 +63,11 @@
                     <div class="inner">
                         <h3>53<sup style="font-size: 20px">%</sup></h3>
 
-                        <p>Bounce Rate</p>
+                        <p>Paquetes despachados</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-stats-bars"></i>
-                    </div>
-                    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                    </div>                    
                 </div>
             </div>
             <!-- ./col -->
@@ -78,12 +77,11 @@
                     <div class="inner">
                         <h3>44</h3>
 
-                        <p>User Registrations</p>
+                        <p>Paquetes no despachados</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-person-add"></i>
-                    </div>
-                    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                    </div>                    
                 </div>
             </div>
             <!-- ./col -->
@@ -97,8 +95,7 @@
                     </div>
                     <div class="icon">
                         <i class="ion ion-pie-graph"></i>
-                    </div>
-                    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                    </div>                    
                 </div>
             </div>
             <!-- ./col -->
