--- a/EmpresaImportadoraDC/Views/Transportadoras/Index.cshtml
+++ b/EmpresaImportadoraDC/Views/Transportadoras/Index.cshtml
@@ -51,7 +51,7 @@
                     <a asp-action="EditarTr" asp-route-id="@item.TransportadoraId" class="btn btn-success"><i class="fas fa-pencil-alt"></i></a> |
 
                     <form asp-action="EliminarTr" asp-route-id="@item.TransportadoraId" class="d-inline">
-                        <button type="submit" onclick="confirm('¿Desea eliminar esta transportadora?')" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
+                        <button type="submit" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
                     </form>
                 </td>
             </tr>
