--- a/EmpresaImportadoraDC/Views/Clientes/VerDetallePaqueteCliente.cshtml
+++ b/EmpresaImportadoraDC/Views/Clientes/VerDetallePaqueteCliente.cshtml
@@ -36,25 +36,31 @@
                     </th>
                 </tr>
             </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Codigo)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.PesoLibras)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Estado)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ValorTotal)
-                    </td>
-                </tr>
-            }
-        </tbody>
-              </table>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Codigo)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.PesoLibras)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Estado)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ValorTotal)
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
 </section>
+
+@section Scripts{
+
+    <script src="~/js/tabla.js"></script>
+
+}
