--- a/EmpresaImportadoraDC/Views/Mercancia/Index.cshtml
+++ b/EmpresaImportadoraDC/Views/Mercancia/Index.cshtml
@@ -19,7 +19,7 @@
         </div>
         <br />
         <p>
-            <a asp-action="CrearMer" class="btn btn-success"><i class="fas fa-user-plus"></i>Registrar Mercancia</a>
+            <a asp-action="CrearMer" class="btn btn-success"><i class="fas fa-plus"></i> Registrar Mercancia</a>
         </p>
         <table class="table" id="tabla">
             <thead>
@@ -46,9 +46,10 @@
                             @Html.DisplayFor(modelItem => item.TipoMercancia)
                         </td>
                         <td>
-                            <a asp-action="EditarMerca" asp-route-id="@item.MercanciaId">Editar</a> |
+                            <a asp-action="EditarMerca" asp-route-id="@item.MercanciaId" class="btn btn-success"><i class="fas fa-pencil-alt"></i></a> |
+
                             <form asp-action="ElimiarMerca" asp-route-id="@item.MercanciaId" class="d-inline">
-                                <button type="submit" onclick="confirm('¿Desea eliminar este registro?')" class="btn btn-danger"><i class="fas fa-user-minus"></i>Eliminar</button>
+                                <button type="submit" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
                             </form>
                         </td>
                     </tr>
@@ -58,3 +59,9 @@
         </table>
     </div>
 </section>
+
+@section Scripts{
+
+    <script src="~/js/tabla.js"></script>
+
+}
