--- a/EmpresaImportadoraDC/Views/Paquetes/CrearPaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/CrearPaquete.cshtml
@@ -26,6 +26,12 @@
             <form asp-action="CrearPaquete" enctype="multipart/form-data">
                 <input type="hidden" asp-for="PaqueteId" />
                 <input type="hidden" asp-for="NoGuiaCO" />
+                <input type="hidden" asp-for="TransportadoraCO" />
+                <input type="hidden" asp-for="ValorTotal" />
+                <input type="hidden" asp-for="Estado" />
+                <input type="hidden" asp-for="RutaImagen" />
+                <input type="hidden" asp-for="Codigo" />
+                <input type="hidden" asp-for="Imagen" />
 
                 <div asp-validation-summary="ModelOnly"></div>
                 <div class="form-group">
