Pequeños detalles-cliente

--- a/EmpresaImportadoraDC/Views/Clientes/CrearCli.cshtml
+++ b/EmpresaImportadoraDC/Views/Clientes/CrearCli.cshtml
@@ -13,11 +13,11 @@
         <form asp-action="CrearCli">
 
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <!---<div class="form-group">
+            <div class="form-group">
                 <label asp-for="NumeroCasillero" class="control-label"></label>
                 <input asp-for="NumeroCasillero" class="form-control" />
                 <span asp-validation-for="NumeroCasillero" class="text-danger"></span>
-            </div>-->
+            </div>
             <div class="form-group">
                 <label asp-for="NombreCliente" class="control-label"></label>
                 <input asp-for="NombreCliente" class="form-control" />
@@ -34,14 +34,11 @@
                 <span asp-validation-for="DireccionEntrega" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <a class="btn btn-danger" asp-action="Index">Cancelar</a>
                 <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">volver</a>
 </div>
 
 @section Scripts {
