--- a/EmpresaImportadoraDC/Views/Clientes/VerDetallePaqueteCliente.cshtml
+++ b/EmpresaImportadoraDC/Views/Clientes/VerDetallePaqueteCliente.cshtml
@@ -58,6 +58,9 @@
         </table>
     </div>
 </section>
+<div class="form-group">
+    <a class="btn btn-danger" asp-action="Index">volver</a>
+</div>
 
 @section Scripts{
 
