--- a/EmpresaImportadoraDC/Views/Clientes/EditarCli.cshtml
+++ b/EmpresaImportadoraDC/Views/Clientes/EditarCli.cshtml
@@ -34,13 +34,11 @@
                 <span asp-validation-for="DireccionEntrega" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <a class="btn btn-danger" asp-action="Index">Cancelar</a>
                 <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-<div>
-    <a asp-action="Index">volver</a>
 </div>
 
 @section Scripts {
