--- a/EmpresaImportadoraDC/Views/Paquetes/DetallePaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/DetallePaquete.cshtml
@@ -9,7 +9,7 @@
         <br />
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0">DETALLE DE PAQUETE</h1>
+                <h1 class="m-0">Detalle de paquete</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -66,9 +66,9 @@
             <div class="form-group">
                 <p><strong>Valor total: </strong> @Model.ValorTotal</p>
             </div>
-        </form>
-    
+        </form>    
  </div>
+<br/>
 
 
 
