--- a/EmpresaImportadoraDC/Views/Clientes/EditarCli.cshtml
+++ b/EmpresaImportadoraDC/Views/Clientes/EditarCli.cshtml
@@ -3,9 +3,20 @@
 @{
     ViewData["Title"] = "EditarCliente";
 }
-<h1>EditarCliente</h1>
-
-<hr/>
+<br />
+<div class="container-fluid">
+    <div class="row mb-2">
+        <div class="col-sm-6">
+            <h1 class="m-0">Editar cliente</h1>
+        </div>
+        <div class="col-sm-6">
+            <ol class="breadcrumb float-sm-right">
+                <li class="breadcrumb-item"><a asp-action="index" asp-controller="Clientes">Inicio</a></li>
+                <li class="breadcrumb-item active">Editar cliente</li>
+            </ol>
+        </div>
+    </div>
+</div>
 
 <div class="row">
     <div class="col-md-4">
@@ -33,8 +44,7 @@
                 <input asp-for="DireccionEntrega" class="form-control" />
                 <span asp-validation-for="DireccionEntrega" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <a class="btn btn-danger" asp-action="Index">Cancelar</a>
+            <div class="form-group">                
                 <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
