--- a/EmpresaImportadoraDC/Views/Clientes/Index.cshtml
+++ b/EmpresaImportadoraDC/Views/Clientes/Index.cshtml
@@ -9,7 +9,7 @@
         <br />
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0">CLIENTES</h1>
+                <h1 class="m-0">Clientes</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -20,7 +20,7 @@
         </div>
         <br />
         <p>
-            <a asp-action="CrearCli"  class="btn btn-success "><i class="fas fa-plus"></i>Registrar cliente</a>
+            <a asp-action="CrearCli"  class="btn btn-success "><i class="fas fa-plus"></i> Registrar cliente</a>
         </p>
         <table class="table" id="tabla">
             <thead>
@@ -59,7 +59,7 @@
                             @Html.DisplayFor(modelItem => item.DireccionEntrega)
                         </td>
                         <td>
-                            <a asp-action="VerDetallePaqueteCliente" asp-route-id="@item.ClienteId" class="btn btn-success"><i class="fas fa-info-circle"></i></a>
+                            <a asp-action="VerDetallePaqueteCliente" asp-route-id="@item.ClienteId" class="btn btn-dark"><i class="fas fa-info-circle"></i></a>
                             <a asp-action="EditarCli" asp-route-id="@item.ClienteId" class="btn btn-success"><i class="fas fa-pencil-alt"></i></a>
 
                             <form asp-action="EliminarCliente" asp-route-id="@item.ClienteId" class="d-inline">
