--- a/EmpresaImportadoraDC/Views/Clientes/VerDetallePaqueteCliente.cshtml
+++ b/EmpresaImportadoraDC/Views/Clientes/VerDetallePaqueteCliente.cshtml
@@ -9,12 +9,12 @@
         <br />
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0">DETALLE</h1>
+                <h1 class="m-0">Detalle del envío</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a asp-action="index" asp-controller="Clientes">Inicio</a></li>
-                    <li class="breadcrumb-item active">Detalle</li>
+                    <li class="breadcrumb-item active">Detalle del envío</li>
                 </ol>
             </div>
         </div>
@@ -58,9 +58,6 @@
         </table>
     </div>
 </section>
-<div class="form-group">
-    <a class="btn btn-danger" asp-action="Index">volver</a>
-</div>
 
 @section Scripts{
 
