--- a/EmpresaImportadoraDC/Views/Mercancia/CrearMer.cshtml
+++ b/EmpresaImportadoraDC/Views/Mercancia/CrearMer.cshtml
@@ -2,10 +2,20 @@
 @{
     ViewData["Title"] = "CrearMercancia";
 }
-
-<h1>Crear Mercancia</h1>
-<hr />
-
+<br />
+<div class="container-fluid">
+    <div class="row mb-2">
+        <div class="col-sm-6">
+            <h1 class="m-0">Crear mercancía</h1>
+        </div>
+        <div class="col-sm-6">
+            <ol class="breadcrumb float-sm-right">
+                <li class="breadcrumb-item"><a asp-action="index" asp-controller="Mercancia">Inicio</a></li>
+                <li class="breadcrumb-item active">Crear mercancía</li>
+            </ol>
+        </div>
+    </div>
+</div>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="CrearMer">
