--- a/EmpresaImportadoraDC/Views/Mercancia/EditarMerca.cshtml
+++ b/EmpresaImportadoraDC/Views/Mercancia/EditarMerca.cshtml
@@ -3,10 +3,20 @@
 @{
     ViewData["Title"] = "EditarMerca";
 }
-<h1>EditarMercancia</h1>
-
-<hr />
-
+<br />
+<div class="container-fluid">
+    <div class="row mb-2">
+        <div class="col-sm-6">
+            <h1 class="m-0">Editar mercancía</h1>
+        </div>
+        <div class="col-sm-6">
+            <ol class="breadcrumb float-sm-right">
+                <li class="breadcrumb-item"><a asp-action="index" asp-controller="Mercancia">Inicio</a></li>
+                <li class="breadcrumb-item active">Editar mercancía</li>
+            </ol>
+        </div>
+    </div>
+</div>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="EditarMerca">
@@ -17,15 +27,12 @@
                 <label asp-for="TipoMercancia" class="control-label"></label>
                 <input asp-for="TipoMercancia" class="form-control" />
                 <span asp-validation-for="TipoMercancia" class="text-danger"></span>
-            </div>                     
+            </div>
             <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-<div>
-    <a asp-action="Index">volver</a>
 </div>
 
 @section Scripts {
