--- a/EmpresaImportadoraDC/Views/Paquetes/EditarPaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/EditarPaquete.cshtml
@@ -9,7 +9,7 @@
         <br />
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0">EDITAR PAQUETE</h1>
+                <h1 class="m-0">Editar paquete</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
