--- a/EmpresaImportadoraDC/Views/Transportadoras/CrearTr.cshtml
+++ b/EmpresaImportadoraDC/Views/Transportadoras/CrearTr.cshtml
@@ -9,7 +9,7 @@
         <br />
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0">REGISTRAR TRANSPORTADORA</h1>
+                <h1 class="m-0">Registrar transportadora</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -36,15 +36,12 @@
                 <span asp-validation-for="Pais" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-primary" />
+                <input type="submit" value="Registrar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Regresar</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
