--- a/EmpresaImportadoraDC/Views/Transportadoras/EditarTr.cshtml
+++ b/EmpresaImportadoraDC/Views/Transportadoras/EditarTr.cshtml
@@ -9,7 +9,7 @@
         <br />
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0">EDITAR TRANSPORTADORA</h1>
+                <h1 class="m-0">Editar transportadora</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -43,9 +43,6 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Regresar</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
