--- a/EmpresaImportadoraDC/Views/Transportadoras/Index.cshtml
+++ b/EmpresaImportadoraDC/Views/Transportadoras/Index.cshtml
@@ -11,7 +11,7 @@
 <br />
 <div class="row mb-2">
     <div class="col-sm-6">
-        <h1 class="m-0">TRANSPORTADORAS</h1>
+        <h1 class="m-0">Transportadoras</h1>
     </div>
     <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
