--- a/EmpresaImportadoraDC/Views/ValorLibras/EditarValorLibra.cshtml
+++ b/EmpresaImportadoraDC/Views/ValorLibras/EditarValorLibra.cshtml
@@ -9,7 +9,7 @@
         <br />
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0">EDITAR VALOR LIBRA</h1>
+                <h1 class="m-0">Editar valor libra</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
