--- a/EmpresaImportadoraDC/Views/Paquetes/CrearPaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/CrearPaquete.cshtml
@@ -60,11 +60,12 @@
                     <span asp-validation-for="MercanciaId" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Imagen" class="control-label"></label>
+                    <label asp-for="Imagen" class="form-label" ></label><br/>
                     <input type="file" asp-for="Imagen" accept="image/*" />
                     <span asp-validation-for="Imagen" class="text-danger"></span>
                 </div>
                 <div class="form-group">
+                    <br/>
                     <input type="submit" value="Guardar" class="btn btn-primary" />
                 </div>
             </form>
