Agregué los cambios de estado y hice un cambio en transportadora

--- a/EmpresaImportadoraDC/Views/Paquetes/EditarPaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/EditarPaquete.cshtml
@@ -27,7 +27,7 @@
                 <input type="hidden" asp-for="PaqueteId" />
                 <input type="hidden" asp-for="NoGuiaCO" />
                 <input type="hidden" asp-for="TransportadoraCO" />                
-                <input type="hidden" asp-for="Estado" />
+                <input type="hidden" asp-for="EstadoId" />
                 <input type="hidden" asp-for="RutaImagen" />
                 <input type="hidden" asp-for="Codigo" />
 
