--- a/EmpresaImportadoraDC/Views/Paquetes/CrearPaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/CrearPaquete.cshtml
@@ -28,7 +28,7 @@
                 <input type="hidden" asp-for="NoGuiaCO" />
                 <input type="hidden" asp-for="TransportadoraCO" />
                 <input type="hidden" asp-for="ValorTotal" />
-                <input type="hidden" asp-for="Estado" />
+                <input type="hidden" asp-for="EstadoId" />
                 <input type="hidden" asp-for="RutaImagen" />
                 <input type="hidden" asp-for="Codigo" />
                 <input type="hidden" asp-for="Imagen" />
