--- a/EmpresaImportadoraDC/Views/Transportadoras/EditarTr.cshtml
+++ b/EmpresaImportadoraDC/Views/Transportadoras/EditarTr.cshtml
@@ -33,7 +33,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="Pais" class="control-label"></label>
-                <input asp-for="Pais" class="form-control" />
+                <select asp-for="Pais" class="form-control">
+                    <option value="CO">Colombia</option>
+                    <option value="USA">Estados Unidos</option>
+                </select>
                 <span asp-validation-for="Pais" class="text-danger"></span>
             </div>
             <div class="form-group">
