--- a/EmpresaImportadoraDC/Views/Paquetes/DespacharPaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/DespacharPaquete.cshtml
@@ -2,27 +2,12 @@
 
 @{
     ViewData["Title"] = "Detalle";
+    Layout = null;
 }
 
-<section class="content">
-    <div class="container-fluid">
-        <br />
-        <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1 class="m-0">DESPACHAR PAQUETE</h1>
-            </div>
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a asp-action="index" asp-controller="Paquetes">Inicio</a></li>
-                    <li class="breadcrumb-item active">Despachar paquete</li>
-                </ol>
-            </div>
-        </div>
-    </div>
-</section>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
             <form asp-action="DespacharPaquete" asp-route-id="@Model.PaqueteId" enctype="multipart/form-data">
                 <input type="hidden" asp-for="PaqueteId" />
                 <input type="hidden" asp-for="NoGuiaUSA" />
