--- a/EmpresaImportadoraDC/Views/Paquetes/DetallePaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/DetallePaquete.cshtml
@@ -2,25 +2,9 @@
 
 @{
     ViewData["Title"] = "Detalle";
+    Layout = null;
 }
 
-<section class="content">
-    <div class="container-fluid">
-        <br />
-        <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1 class="m-0">Detalle de paquete</h1>
-            </div>
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a asp-action="index" asp-controller="Paquetes">Inicio</a></li>
-                    <li class="breadcrumb-item active">Detalle de paquete</li>
-                </ol>
-            </div>
-        </div>
-    </div>
-</section>
-<br />
 <div class="container-fluid">
     
         <form asp-route-id="@Model.PaqueteId">
