--- a/EmpresaImportadoraDC/Views/Paquetes/Index.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/Index.cshtml
@@ -20,7 +20,7 @@
         </div>
         <br />
         <p>
-            <a asp-action="CrearPaquete" class="btn btn-success "><i class="fas fa-plus"></i> Registrar paquete</a>
+            <a onclick="mostrarModalG('@Url.Action("CrearPaquete","Paquetes","null", Context.Request.Scheme)', 'Registrar paquete')" class="btn btn-success "><i class="fas fa-plus"></i> Registrar paquete</a>
         </p>
         <table class="table" id="tabla">
             <thead>
@@ -68,15 +68,15 @@
                             }
                             else
                             {
-                                <a asp-action="DespacharPaquete" asp-route-id="@item.PaqueteId" class="btn btn-success">Despachar</a>
+                                <a onclick="mostrarModalS('@Url.Action("DespacharPaquete","Paquetes", new {id = item.PaqueteId}, Context.Request.Scheme)', 'Despachar paquete')" class="btn btn-success">Despachar</a>
                             }
                         </td>
                         <td>
-                            <a asp-action="DetallePaquete" asp-route-id="@item.PaqueteId" class="btn btn-dark"><i class="fas fa-info-circle"></i></a>|
-                            <a asp-action="EditarPaquete" asp-route-id="@item.PaqueteId" class="btn btn-success"><i class="fas fa-pencil-alt"></i></a>|
+                            <a onclick="mostrarModalG('@Url.Action("DetallePaquete","Paquetes", new {id = item.PaqueteId}, Context.Request.Scheme)', 'Detalle paquete')" class="btn btn-dark"><i class="fas fa-info-circle"></i></a>|
+                            <a onclick="mostrarModalG('@Url.Action("EditarPaquete","Paquetes", new {id = item.PaqueteId}, Context.Request.Scheme)', 'Editar paquete')" class="btn btn-success"><i class="fas fa-pencil-alt"></i></a>|
                             <form asp-action="EliminarPaquete" asp-route-id="@item.PaqueteId" class="d-inline">
                                 <button type="submit" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
-                            </form>                            
+                            </form>
                         </td>
                     </tr>
                 }
@@ -86,9 +86,11 @@
     </div>
 </section>
 
-@section Scripts{ 
+@section Scripts{
 
     <script src="~/js/tabla.js"></script>
+    <script src="~/js/modals.js"></script>
+
     <script>
         @if(TempData["Mensaje"] != null && TempData["Accion"].ToString().Equals("RegistrarPaquete")) { <text>
                   Swal.fire({
