--- a/EmpresaImportadoraDC/Views/Clientes/CrearCli.cshtml
+++ b/EmpresaImportadoraDC/Views/Clientes/CrearCli.cshtml
@@ -1,6 +1,7 @@
 ﻿@model EmpresaImportadoraDC.Models.Entities.Cliente
 @{
     ViewData["Title"] = "CrearCliente";
+    Layout = null;
 }
 <br/>
 <div class="container-fluid">
