--- a/EmpresaImportadoraDC/Views/Clientes/EditarCli.cshtml
+++ b/EmpresaImportadoraDC/Views/Clientes/EditarCli.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "EditarCliente";
+    Layout = null;
 }
 <br />
 <div class="container-fluid">
@@ -26,7 +27,7 @@
             <input type="hidden" asp-for="ClienteId" />
             <div class="form-group">
                 <label asp-for="NumeroCasillero" class="control-label"></label>
-                <input asp-for="NumeroCasillero" class="form-control" />
+                <input asp-for="NumeroCasillero" class="form-control" readonly="readonly" />
                 <span asp-validation-for="NumeroCasillero" class="text-danger"></span>
             </div>
             <div class="form-group">
