--- a/EmpresaImportadoraDC/Views/Clientes/Index.cshtml
+++ b/EmpresaImportadoraDC/Views/Clientes/Index.cshtml
@@ -20,7 +20,7 @@
         </div>
         <br />
         <p>
-            <a asp-action="CrearCli"  class="btn btn-success "><i class="fas fa-plus"></i> Registrar cliente</a>
+            <a onclick="mostrarModalG('@Url.Action("CrearCli","Clientes","null", Context.Request.Scheme)', 'Registrar cliente')" class="btn btn-success "><i class="fas fa-plus"></i> Registrar cliente</a>
         </p>
         <table class="table" id="tabla">
             <thead>
@@ -60,7 +60,7 @@
                         </td>
                         <td>
                             <a asp-action="VerDetallePaqueteCliente" asp-route-id="@item.ClienteId" class="btn btn-dark"><i class="fas fa-info-circle"></i></a>
-                            <a asp-action="EditarCli" asp-route-id="@item.ClienteId" class="btn btn-success"><i class="fas fa-pencil-alt"></i></a>
+                            <a onclick="mostrarModalG('@Url.Action("EditarCli","Clientes", new {id = item.ClienteId}, Context.Request.Scheme)', 'Editar cliente')" class="btn btn-success"><i class="fas fa-pencil-alt"></i></a>
 
                             <form asp-action="EliminarCliente" asp-route-id="@item.ClienteId" class="d-inline">
                                 <button type="submit" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
@@ -76,6 +76,7 @@
 @section Scripts{
 
     <script src="~/js/tabla.js"></script>
+    <script src="~/js/modals.js"></script>
     <script>
         @if(TempData["Mensaje"] != null && TempData["Accion"].ToString().Equals("RegistrarCliente")) { <text>
                   Swal.fire({
