--- a/EmpresaImportadoraDC/Views/Paquetes/DetallePaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/DetallePaquete.cshtml
@@ -19,7 +19,7 @@
                 <p><strong>Cliente: </strong> @Model.Cliente.NombreCliente</p>
             </div>
             <div class="form-group">
-                <p><strong>Estado: </strong> @Model.Estado</p>
+                <p><strong>Estado: </strong> @Model.Estado.TipoEstado</p>
             </div>
             <div class="form-group">
                 <p><strong>Guía transportadora USA: </strong> @Model.NoGuiaUSA</p>
