--- a/EmpresaImportadoraDC/Views/Clientes/VerDetallePaqueteCliente.cshtml
+++ b/EmpresaImportadoraDC/Views/Clientes/VerDetallePaqueteCliente.cshtml
@@ -3,23 +3,11 @@
 @{
     ViewData["Title"] = "VerDetallePaqueteCliente";
     Layout = null;
+
 }
 
 <section class="content">
     <div class="container-fluid">
-        <br />
-        <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1 class="m-0">Detalle del envío</h1>
-            </div>
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a asp-action="index" asp-controller="Clientes">Inicio</a></li>
-                    <li class="breadcrumb-item active">Detalle del envío</li>
-                </ol>
-            </div>
-        </div>
-        <br />
         <table class="table" id="tabla">
             <thead>
                 <tr>
@@ -48,7 +36,7 @@
                             @Html.DisplayFor(modelItem => item.PesoLibras)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Estado)
+                            @Html.DisplayFor(modelItem => item.Estado.TipoEstado)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.ValorTotal)
